# plateau

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  INTEGRITY.md  LAUNCH_STATUS.md  PAPER_RECONCILIATION.md  QUALITY_BENCHMARKS.md  README.md  RECONCILE.md  RESULTS.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
adapters/claude_code/: README.md  SKILL.md  hook.py
assets/: make_og.py
demo/: FINDINGS.md  c4_readout.md  chart.py  chart2.py  chart3.py  chart4.py  chart6.py  chart6b.py  demo2_prereg.md  demo2_readout.md  demo3_prereg.md  demo3_readout.md  demo4_prereg.md  demo4_readout.md  demo6_prereg.md  demo6_readout.md  demo6b_readout.md  demo_prereg.md  demo_readout.md  driver.py  driver_ab_readout.md  harness4.py  make_context_gif.py  mockplumb4.py  mockplumb6.py  plateau_run_readout.md  probe_command_output.py  probe_verification_chain.py  program.py  program2.py  program3.py  recompute_demo4.py  recompute_demo6.py  run_demo.py  run_demo2.py  run_demo3.py  run_demo4.py  run_demo6.py  score_demo.py  score_demo2.py  (+10 more)
demo/raw/: manifest.jsonl  records.json  state.json
demo/raw2/: manifest.jsonl  records.json  specs.json
demo/raw3/: manifest.jsonl  records.json  specs.json
demo/raw4/: arm1_fullhistory_completion.json  arm1_fullhistory_fplan.txt  arm1_fullhistory_signal.json  arm1_fullhistory_step1_check.json  arm1_fullhistory_step1_prompt.txt  arm1_fullhistory_step1_reply.md  arm1_fullhistory_step2_check.json  arm1_fullhistory_step2_prompt.txt  arm1_fullhistory_step2_reply.md  arm2_efficiency_completion.json  arm2_efficiency_signal.json  arm2_efficiency_step1_check.json  arm2_efficiency_step1_prompt.txt  arm2_efficiency_step1_reply.md  arm2_efficiency_step2_prompt.txt  arm2_efficiency_step2_reply.md  arm2_efficiency_step3_check.json  arm2_efficiency_step3_prompt.txt  arm2_efficiency_step3_reply.md  arm3_autonomy_completion.json  arm3_autonomy_fplan.txt  arm3_autonomy_signal.json  arm3_autonomy_step1_prompt.txt  arm3_autonomy_step1_reply.md  arm3_autonomy_step2_check.json  arm3_autonomy_step2_prompt.txt  arm3_autonomy_step2_reply.md  arm3_autonomy_step3_check.json  arm3_autonomy_step3_prompt.txt  arm3_autonomy_step3_reply.md  manifest.jsonl
demo/raw6/: arm1_fullhistory_completion.json  arm1_fullhistory_signal.json  arm1_fullhistory_step1_prompt.txt  arm1_fullhistory_step1_reply.md  arm1_fullhistory_step2_prompt.txt  arm1_fullhistory_step2_reply.md  arm1_fullhistory_step3_check.json  arm1_fullhistory_step3_prompt.txt  arm1_fullhistory_step3_reply.md  arm1_fullhistory_step4_check.json  arm1_fullhistory_step4_prompt.txt  (+25 more)
examples/: bare_loop.py  continuum_story.md
plateau/: __init__.py  continuum.py  driver.py  metrics.py  orchestrator.py  signal.py
qa/: ACTIVATION_PROMPT.md  README.md  pyproject.toml
qa/plateau_qa/: config.py  driver.py  gate.py  pr.py  prompts.py  state.py
qa/tests/: test_config_bootstrap.py  test_core.py  test_driver.py  test_pr.py
tests/: test_agency_core.py  test_agency_driver.py  test_cc_adapter.py  test_config_bootstrap.py  test_continuum.py  test_driver.py  test_integrity.py  test_metrics.py  test_orchestrator.py  test_pr.py  test_qa_suite.py  test_signal_gate.py
(+236 files in other folders)
