[project]
name = "plateau"
version = "0.1.0"
description = "Bounded, predictable context for long-horizon agents — emit a small re-grounded signal instead of carrying full history."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Plateau contributors" }]
keywords = ["agents", "context", "llm", "long-horizon", "memory", "continuity"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
dependencies = []   # the CORE has zero third-party dependencies (stdlib only)

[project.optional-dependencies]
# numpy only powers the bootstrap CI in metrics + the demo chart; the core never needs it.
demo = ["numpy>=1.24", "matplotlib>=3.7"]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/OWNER/plateau"
Repository = "https://github.com/OWNER/plateau"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plateau"]

[tool.pytest.ini_options]
testpaths = ["tests"]
