[project]
name = "plateau"
version = "0.1.0"
description = "Bounded, predictable context for long-horizon agents — emit a small re-grounded signal instead of carrying full history."
readme = "README.md"
requires-python = ">=3.9"   # core is stdlib-only + defers annotations (from __future__); 28 tests pass on 3.9.6 (macOS system python3)
license = { text = "Apache-2.0" }
authors = [{ name = "Plateau contributors" }]
keywords = ["agents", "context", "llm", "long-horizon", "memory", "continuity"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
dependencies = []   # the CORE has zero third-party dependencies (stdlib only)

[project.optional-dependencies]
# numpy only powers the bootstrap CI in metrics + the demo chart; the core never needs it.
demo = ["numpy>=1.24", "matplotlib>=3.7"]
test = ["pytest>=7"]

[project.scripts]
# the external bounded-context agency driver, folded in as plateau.agency
plateau-agency = "plateau.agency.driver:main"

[project.urls]
Homepage = "https://github.com/aimerdoux/plateau"
Repository = "https://github.com/aimerdoux/plateau"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plateau", "plateau.agency"]
# ship the agency example override configs (JSON is not auto-included otherwise)
artifacts = ["plateau/agency/configs/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
