[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plateau-qa"
version = "0.1.0"
description = "External bounded-context QA-hardening driver (Plateau Option-1): a Python loop that holds a small re-grounded signal on disk and spawns each step as a fresh `claude -p` worker. Repo-agnostic, stdlib-only."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
plateau-qa = "plateau_qa.driver:main"

[tool.setuptools]
packages = ["plateau_qa"]

[tool.setuptools.package-data]
plateau_qa = ["configs/*.json"]
